effectBlock, fixed unlimited moves bug, removed basic atk